updates to weather gui

--- a/latex/classNewsWindow.tex
+++ b/latex/classNewsWindow.tex
@@ -29,6 +29,9 @@ Collaboration diagram for News\+Window\+:\nopagebreak
 \item 
 \mbox{\Hypertarget{classNewsWindow_aa82e2963b165caac4a385fe456386642}\label{classNewsWindow_aa82e2963b165caac4a385fe456386642}} 
 void {\bfseries on\+\_\+\+Back\+Button\+\_\+clicked} ()
+\item 
+\mbox{\Hypertarget{classNewsWindow_afe94ab8b8cba76b0dcfa2a91f0dede53}\label{classNewsWindow_afe94ab8b8cba76b0dcfa2a91f0dede53}} 
+void {\bfseries on\+\_\+\+Submit\+Button\+\_\+clicked} ()
 \end{DoxyCompactItemize}
 \doxysubsection*{Private Attributes}
 \begin{DoxyCompactItemize}
